Replaced PlainTextPlugin with WebKit based Plugin

--- a/en.lproj/MBMessageViewController.xib
+++ b/en.lproj/MBMessageViewController.xib
@@ -93,6 +93,25 @@
                                             </binding>
                                         </connections>
                                     </textField>
+                                    <textField horizontalHuggingPriority="814" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9B0-04-G0A">
+                                        <rect key="frame" x="340" y="68" width="88" height="17"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="dateRecieved" id="fDm-Kv-8Z2">
+                                            <dateFormatter key="formatter" dateStyle="short" timeStyle="short" doesRelativeDateFormatting="YES" id="rBM-Aj-XIg"/>
+                                            <font key="font" metaFont="system"/>
+                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                        <accessibility help="Date sent"/>
+                                        <connections>
+                                            <binding destination="-2" name="value" keyPath="self.representedObject.dateReceived" id="IBd-mz-X06">
+                                                <dictionary key="options">
+                                                    <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
+                                                    <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                                </dictionary>
+                                            </binding>
+                                        </connections>
+                                    </textField>
                                     <textField horizontalHuggingPriority="888" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QgS-JV-yC2">
                                         <rect key="frame" x="8" y="20" width="54" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -146,6 +165,7 @@
                                     <constraint firstItem="3oG-Cl-2yQ" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="top" constant="6" id="5Pu-Ct-WXF"/>
                                     <constraint firstAttribute="trailing" secondItem="BzI-kt-IXz" secondAttribute="trailing" id="Ef8-Fy-Jl8"/>
                                     <constraint firstItem="QgS-JV-yC2" firstAttribute="top" secondItem="dcE-LI-xZa" secondAttribute="bottom" constant="8" id="FsY-QU-cS6"/>
+                                    <constraint firstAttribute="trailing" secondItem="9B0-04-G0A" secondAttribute="trailing" constant="10" id="Fxz-mF-Syq"/>
                                     <constraint firstItem="QgS-JV-yC2" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" constant="10" id="O2S-yI-Ox7"/>
                                     <constraint firstItem="N1j-tJ-Va9" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="top" constant="20" id="Ucl-N7-W34"/>
                                     <constraint firstAttribute="height" constant="150" id="Vqd-p1-Ab8"/>
@@ -155,6 +175,7 @@
                                     <constraint firstItem="dcE-LI-xZa" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" id="gd6-aH-LI5"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="865" constant="300" id="jMo-EH-biA"/>
                                     <constraint firstItem="dcE-LI-xZa" firstAttribute="baseline" secondItem="Mqd-3z-t15" secondAttribute="baseline" id="qbi-bS-VBa"/>
+                                    <constraint firstItem="Mqd-3z-t15" firstAttribute="top" secondItem="9B0-04-G0A" secondAttribute="bottom" id="roO-Ig-Bbo"/>
                                     <constraint firstItem="3oG-Cl-2yQ" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" constant="10" id="t6B-uD-nVd"/>
                                     <constraint firstItem="BzI-kt-IXz" firstAttribute="top" secondItem="N1j-tJ-Va9" secondAttribute="bottom" constant="8" id="wvo-Qp-nIF"/>
                                 </constraints>
