--- a/en.lproj/MBMessageViewController.xib
+++ b/en.lproj/MBMessageViewController.xib
@@ -37,10 +37,10 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <subviews>
                                     <textField horizontalHuggingPriority="900" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="N1j-tJ-Va9">
-                                        <rect key="frame" x="391" y="113" width="47" height="17"/>
+                                        <rect key="frame" x="394" y="115" width="44" height="19"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="sender" id="uZQ-ae-hO1">
-                                            <font key="font" metaFont="system"/>
+                                            <font key="font" size="13" name="HelveticaNeue"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
@@ -56,10 +56,10 @@
                                         </connections>
                                     </textField>
                                     <textField horizontalHuggingPriority="900" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BzI-kt-IXz">
-                                        <rect key="frame" x="387" y="88" width="51" height="17"/>
+                                        <rect key="frame" x="392" y="94" width="46" height="19"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="replyTo" id="cql-ty-323">
-                                            <font key="font" metaFont="system"/>
+                                            <font key="font" size="13" name="HelveticaNeue"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
@@ -75,11 +75,11 @@
                                         </connections>
                                     </textField>
                                     <textField horizontalHuggingPriority="814" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Mqd-3z-t15">
-                                        <rect key="frame" x="369" y="51" width="59" height="17"/>
+                                        <rect key="frame" x="371" y="48" width="57" height="19"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="dateSent" id="9VQ-BA-VAt">
                                             <dateFormatter key="formatter" dateStyle="short" timeStyle="short" doesRelativeDateFormatting="YES" id="7ym-bj-ZAa"/>
-                                            <font key="font" metaFont="system"/>
+                                            <font key="font" size="13" name="HelveticaNeue"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
@@ -93,12 +93,12 @@
                                             </binding>
                                         </connections>
                                     </textField>
-                                    <textField horizontalHuggingPriority="814" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9B0-04-G0A">
-                                        <rect key="frame" x="340" y="68" width="88" height="17"/>
+                                    <textField horizontalHuggingPriority="814" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9B0-04-G0A">
+                                        <rect key="frame" x="344" y="67" width="84" height="19"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="dateRecieved" id="fDm-Kv-8Z2">
                                             <dateFormatter key="formatter" dateStyle="short" timeStyle="short" doesRelativeDateFormatting="YES" id="rBM-Aj-XIg"/>
-                                            <font key="font" metaFont="system"/>
+                                            <font key="font" size="13" name="HelveticaNeue"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
@@ -149,11 +149,11 @@
                                         </connections>
                                     </comboBox>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3oG-Cl-2yQ">
-                                        <rect key="frame" x="10" y="130" width="79" height="14"/>
+                                        <rect key="frame" x="10" y="129" width="78" height="15"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <buttonCell key="cell" type="inline" title="Show Parts" alternateTitle="Hide Parts" bezelStyle="inline" image="NSRightFacingTriangleTemplate" imagePosition="right" alignment="center" alternateImage="NSLeftFacingTriangleTemplate" inset="2" id="brs-zt-KJQ">
                                             <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
-                                            <font key="font" metaFont="smallSystem"/>
+                                            <font key="font" size="11" name="HelveticaNeue"/>
                                         </buttonCell>
                                         <connections>
                                             <action selector="showPartsPopover:" target="-2" id="sC9-nY-qhL"/>
@@ -167,7 +167,7 @@
                                     <constraint firstItem="QgS-JV-yC2" firstAttribute="top" secondItem="dcE-LI-xZa" secondAttribute="bottom" constant="8" id="FsY-QU-cS6"/>
                                     <constraint firstAttribute="trailing" secondItem="9B0-04-G0A" secondAttribute="trailing" constant="10" id="Fxz-mF-Syq"/>
                                     <constraint firstItem="QgS-JV-yC2" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" constant="10" id="O2S-yI-Ox7"/>
-                                    <constraint firstItem="N1j-tJ-Va9" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="top" constant="20" id="Ucl-N7-W34"/>
+                                    <constraint firstItem="N1j-tJ-Va9" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="top" constant="16" id="Ucl-N7-W34"/>
                                     <constraint firstAttribute="height" constant="150" id="Vqd-p1-Ab8"/>
                                     <constraint firstAttribute="trailing" secondItem="N1j-tJ-Va9" secondAttribute="trailing" id="Vua-qE-Egn"/>
                                     <constraint firstAttribute="trailing" secondItem="Mqd-3z-t15" secondAttribute="trailing" constant="10" id="XsD-iu-YxQ"/>
@@ -177,7 +177,7 @@
                                     <constraint firstItem="dcE-LI-xZa" firstAttribute="baseline" secondItem="Mqd-3z-t15" secondAttribute="baseline" id="qbi-bS-VBa"/>
                                     <constraint firstItem="Mqd-3z-t15" firstAttribute="top" secondItem="9B0-04-G0A" secondAttribute="bottom" id="roO-Ig-Bbo"/>
                                     <constraint firstItem="3oG-Cl-2yQ" firstAttribute="leading" secondItem="LFh-Jj-pYw" secondAttribute="leading" constant="10" id="t6B-uD-nVd"/>
-                                    <constraint firstItem="BzI-kt-IXz" firstAttribute="top" secondItem="N1j-tJ-Va9" secondAttribute="bottom" constant="8" id="wvo-Qp-nIF"/>
+                                    <constraint firstItem="BzI-kt-IXz" firstAttribute="top" secondItem="N1j-tJ-Va9" secondAttribute="bottom" constant="2" id="wvo-Qp-nIF"/>
                                 </constraints>
                                 <accessibility description="Header" help="Header"/>
                                 <connections>
