--- a/en.lproj/MainMenu.xib
+++ b/en.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13B3116" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
@@ -164,7 +164,7 @@
                         <color key="fillColor" name="windowFrameColor" catalog="System" colorSpace="catalog"/>
                         <accessibility help="Message toolbar"/>
                     </box>
-                    <splitView wantsLayer="YES" focusRingType="none" autosaveName="SidePaneSplitterAutosave" dividerStyle="thin" vertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="838">
+                    <splitView wantsLayer="YES" focusRingType="none" autosaveName="MainSplitterAutosave" dividerStyle="thin" vertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="838">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="651"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                         <subviews>
@@ -291,7 +291,7 @@
                                             <nil key="backgroundColor"/>
                                         </clipView>
                                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" id="1060">
-                                            <rect key="frame" x="0.0" y="610" width="270.99999904632568" height="16"/>
+                                            <rect key="frame" x="0.0" y="635" width="270.99999904632568" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                         <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" id="1058">
@@ -312,7 +312,7 @@
                                 <rect key="frame" x="273" y="0.0" width="751" height="651"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <splitView wantsLayer="YES" autosaveName="MainPaneSplitterAutosave" dividerStyle="thin" translatesAutoresizingMaskIntoConstraints="NO" id="1080">
+                                    <splitView wantsLayer="YES" autosaveName="MessagesSplitterAutosave" dividerStyle="thin" translatesAutoresizingMaskIntoConstraints="NO" id="1080" userLabel="Messages Split View">
                                         <rect key="frame" x="0.0" y="0.0" width="751" height="651"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                                         <subviews>
@@ -327,7 +327,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="751" height="318"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <collectionView toolTip="Drag a folder here to create a new portal." focusRingType="exterior" horizontalCompressionResistancePriority="1000" selectable="YES" id="1128" userLabel="Portals Collection View" customClass="MBPortalsCollectionView">
+                                                                <collectionView toolTip="Drag a folder here to create a new portal." focusRingType="exterior" selectable="YES" id="1128" userLabel="Portals Collection View" customClass="MBPortalsCollectionView">
                                                                     <rect key="frame" x="0.0" y="0.0" width="751" height="318"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <color key="primaryBackgroundColor" red="0.90196084976196289" green="0.91764712333679199" blue="0.93725496530532837" alpha="1" colorSpace="deviceRGB"/>
@@ -344,6 +344,9 @@
                                                             <color key="backgroundColor" red="0.90196084976196289" green="0.91764712333679199" blue="0.93725496530532837" alpha="1" colorSpace="deviceRGB"/>
                                                             <accessibility help="Portals"/>
                                                         </clipView>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="266" id="xcI-5l-2pG"/>
+                                                        </constraints>
                                                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" id="1127">
                                                             <rect key="frame" x="1" y="144" width="233" height="15"/>
                                                             <autoresizingMask key="autoresizingMask"/>
@@ -364,7 +367,7 @@
                                                 </constraints>
                                                 <accessibility help="Portals"/>
                                             </customView>
-                                            <customView wantsLayer="YES" focusRingType="none" id="1082" userLabel="Message View">
+                                            <customView wantsLayer="YES" focusRingType="none" horizontalHuggingPriority="249" id="1082" userLabel="Message View">
                                                 <rect key="frame" x="0.0" y="319" width="751" height="332"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <subviews>
@@ -394,19 +397,20 @@
                                                                 <constraint firstAttribute="trailing" secondItem="Ovp-zj-tQH" secondAttribute="trailing" priority="538" id="mfS-Fo-ANX"/>
                                                                 <constraint firstItem="Ovp-zj-tQH" firstAttribute="leading" secondItem="5k9-DR-QWV" secondAttribute="leading" id="z5Q-Zl-mll"/>
                                                             </constraints>
-                                                            <color key="backgroundColor" patternImage="1F8E6235-AB85-4BE6-8855-CF3BA57427E8" colorSpace="pattern"/>
+                                                            <color key="backgroundColor" patternImage="965A4631-A67E-4212-9224-B75980BFAFCC" colorSpace="pattern"/>
                                                         </clipView>
                                                         <scroller key="horizontalScroller" verticalHuggingPriority="750" id="fzv-cM-tBI">
                                                             <rect key="frame" x="0.0" y="316" width="751" height="16"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                         </scroller>
                                                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" id="IbM-9h-U1Q">
-                                                            <rect key="frame" x="735" y="0.0" width="16" height="332"/>
+                                                            <rect key="frame" x="736" y="0.0" width="15" height="332"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                         </scroller>
                                                     </scrollView>
                                                 </subviews>
                                                 <constraints>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="400" id="0rj-lT-R7l"/>
                                                     <constraint firstAttribute="bottom" secondItem="jbs-sY-zqu" secondAttribute="bottom" id="BBH-Eg-jhX"/>
                                                     <constraint firstItem="jbs-sY-zqu" firstAttribute="top" secondItem="1082" secondAttribute="top" id="aOW-dk-RFG"/>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="nxX-zL-WQb"/>
@@ -422,6 +426,9 @@
                                             <real value="252"/>
                                         </holdingPriorities>
                                         <accessibility help="Portals and Messages"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="kvA-XW-jAg" id="iXf-1x-hkn"/>
+                                        </connections>
                                     </splitView>
                                 </subviews>
                                 <constraints>
@@ -577,6 +584,7 @@
                 <outlet property="accountSyncProgress" destination="1212" id="1213"/>
                 <outlet property="appWindow" destination="371" id="1403"/>
                 <outlet property="collectionView" destination="1128" id="1402"/>
+                <outlet property="mainSplitView" destination="838" id="aPW-Zb-t5M"/>
                 <outlet property="mainSplitViewDelegate" destination="854" id="858"/>
                 <outlet property="messagesSplitView" destination="1080" id="1406"/>
                 <outlet property="portalsArrayController" destination="1133" id="Ygp-fz-nuP"/>
@@ -605,6 +613,11 @@
                 <outlet property="sidebarOutlineView" destination="1061" id="1534"/>
                 <outlet property="userController" destination="1020" id="1537"/>
                 <outlet property="view" destination="1061" id="1536"/>
+            </connections>
+        </customObject>
+        <customObject id="kvA-XW-jAg" customClass="MBMessagesSplitViewDelegate">
+            <connections>
+                <outlet property="messagesSplitView" destination="1080" id="XZR-eL-4ve"/>
             </connections>
         </customObject>
         <objectController mode="entity" entityName="MBUser" editable="NO" automaticallyPreparesContent="YES" id="1020" userLabel="Selected User Controller">
@@ -1292,7 +1305,7 @@
                             <menuItem title="Vertical Message View" keyEquivalent="w" toolTip="Switches between vertical and horizontal layout" id="1404">
                                 <modifierMask key="keyEquivalentModifierMask" option="YES" command="YES"/>
                                 <connections>
-                                    <action selector="toggleMessagesVerticalView:" target="494" id="1408"/>
+                                    <action selector="toggleMessagesVerticalView:" target="kvA-XW-jAg" id="ocv-j7-U0W"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Hide Sidebar" keyEquivalent="s" id="1497">
@@ -1493,7 +1506,7 @@
         </menu>
     </objects>
     <resources>
-        <image name="1F8E6235-AB85-4BE6-8855-CF3BA57427E8" width="450" height="420">
+        <image name="965A4631-A67E-4212-9224-B75980BFAFCC" width="450" height="420">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
